Updated CircleCI config with template boolean comparison

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,7 +137,7 @@ jobs:
 workflows:
   build-and-deploy:
     jobs:
-      - build-no-release:
+      - commit-build-test:
           context: terraform provider
           filters:
             tags:
