--- a/.github/workflows/pr_trigger.yml
+++ b/.github/workflows/pr_trigger.yml
@@ -12,10 +12,9 @@ jobs:
     - name: Invoke CircleCI PR Workflow
       env:
         CIRCLE_TOKEN: ${{ secrets.CIRCLE_TOKEN }}
-        CIRCLE_BRANCH: ${{ github.head_ref }}
         PROJECT_SLUG: gh/EngineersBox/terraform-provider-instaclustr
       run: |
         curl -X POST \
         -H 'Circle-Token: ${CIRCLE_TOKEN}' \
-        -d "{\"branch\":\"${CIRCLE_BRANCH}\", \"parameters\":{\"is-pr\":true}}" \
+        -d '{"branch":"${GITHUB_REF##*/}", "parameters":{"is-pr":true}}' \
         https://circleci.com/api/v2/project/${PROJECT_SLUG}/pipeline
