--- a/.github/workflows/pr_trigger.yml
+++ b/.github/workflows/pr_trigger.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Show branch
+      run: echo ${GITHUB_REF##*/}
     - name: Invoke CircleCI PR Workflow
       env:
         CIRCLE_TOKEN: ${{ secrets.CIRCLE_TOKEN }}
