--- a/.github/workflows/pr_trigger.yml
+++ b/.github/workflows/pr_trigger.yml
@@ -9,15 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Show branch
+      run: echo ${GITHUB_REF##*/}
     - name: Invoke CircleCI PR Workflow
       env:
         CIRCLE_TOKEN: ${{ secrets.CIRCLE_TOKEN }}
-        CIRCLE_BRANCH: ${{ github.head_ref }}
         PROJECT_SLUG: gh/EngineersBox/terraform-provider-instaclustr
       run: |
         curl -X POST \
         -H 'Circle-Token: ${CIRCLE_TOKEN}' \
-        -H 'Content-Type: application/json' \
-        -H 'Accept: application/json' \
-        -d "{\"branch\":\"${CIRCLE_BRANCH}\", \"parameters\":{\"is-pr\":true}}" \
+        -d '{"branch":"${GITHUB_REF##*/}", "parameters":{"is-pr":true}}' \
         https://circleci.com/api/v2/project/${PROJECT_SLUG}/pipeline
