--- a/.github/workflows/pr_trigger.yml
+++ b/.github/workflows/pr_trigger.yml
@@ -14,7 +14,7 @@ jobs:
         CIRCLE_TOKEN: "a7ba232028b86cff5396141a7dfa7f25bf451eba"
         PROJECT_SLUG: gh/EngineersBox/terraform-provider-instaclustr
       run: |
-        curl -X POST \
-        -H 'Circle-Token: ${CIRCLE_TOKEN}' \
-        -d '{"branch":"${GITHUB_REF##*/}", "parameters":{"is-pr":true}}' \
-        https://circleci.com/api/v2/project/${PROJECT_SLUG}/pipeline
+        curl -v -X POST \
+        -H 'Circle-Token: a7ba232028b86cff5396141a7dfa7f25bf451eba' \
+        -d '{"branch":"INS-12888-Enable-CircleCI-Build-Test-On-Commit", "parameters":{"is-pr":true}}' \
+        https://circleci.com/api/v2/project/gh/EngineersBox/terraform-provider-instaclustr/pipeline
